force-app/main/default/objects/Salesforce_Scheduler_Bucket_Slots__x/Salesforce_Scheduler_Bucket_Slots__x.object-meta.xml
<CustomObject>
    <externalDataSource>BestTimeToCall</externalDataSource>
    <externalName>ins-SchedulerTimeBucket-QA</externalName>
    <label>Salesforce Scheduler Bucket Slots</label>
    <pluralLabel>Salesforce Scheduler Bucket Slots</pluralLabel>
</CustomObject>