force-app/main/default/objects/Salesforce_Scheduler_Bucket_Slots__x/fields/BucketName__c.field-meta.xml
<CustomField>
    <fullName>BucketName__c</fullName>
    <label>BucketName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>