force-app/main/default/objects/Salesforce_Scheduler_Bucket_Slots__x/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>EndTime</label>
    <length>100</length>
    <type>Text</type>
</CustomField>