force-app/main/default/objects/Salesforce_Scheduler_Bucket_Slots__x/fields/EndTime_SF__c.field-meta.xml
<CustomField>
    <fullName>EndTime_SF__c</fullName>
    <label>EndTime_SF</label>
    <type>Time</type>
</CustomField>