force-app/main/default/objects/Salesforce_Scheduler_Bucket_Slots__x/fields/SlotTime__c.field-meta.xml
<CustomField>
    <fullName>SlotTime__c</fullName>
    <label>SlotTime</label>
    <length>100</length>
    <type>Text</type>
</CustomField>