force-app/main/default/objects/Salesforce_Scheduler_Bucket_Slots__x/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>StartTime</label>
    <length>100</length>
    <type>Text</type>
</CustomField>