force-app/main/default/objects/Salesforce_Scheduler_Bucket_Slots__x/fields/StartTime_SF__c.field-meta.xml
<CustomField>
    <fullName>StartTime_SF__c</fullName>
    <label>StartTime_SF</label>
    <type>Time</type>
</CustomField>